{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "e4596510-5013-4363-9701-0deaea07a162",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "dc9ecae4-9b72-4c69-9fd9-8b6f290cf188",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "9a2ce74f-80ca-4da9-9413-5b6e283066a0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchDrag",
                    "type": "PassThrough",
                    "id": "eb1aee19-fe76-4c1a-aaf2-12bad2b9d9f1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b2b49b7-2cb8-4b2e-a309-f362fd9caa4d",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ea66ed2-a56a-4c7d-ad66-12be2871e9b4",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b242cbdb-c9bf-4007-a7a3-a1e92dcb79b0",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}